2016-11-23  Carl Hetherington  <cth@carlh.net>

	* Fix crash on pressing enter in a crop control on Windows (#1009).

2016-11-17  Carl Hetherington  <cth@carlh.net>

	* Prevent duplicate screen names within a cinema (#1007).

2016-11-16  Carl Hetherington  <cth@carlh.net>

	* Version 2.10.1 released.

2016-11-16  Carl Hetherington  <cth@carlh.net>

	* Fix various crahes in films with missing DCP content.

2016-11-15  Carl Hetherington  <cth@carlh.net>

	* Fix error on using the CPL selection menu on OS X.

	* Version 2.10.0 released.

2016-11-14  Carl Hetherington  <cth@carlh.net>

	* Version 2.9.41 released.

2016-11-14  Carl Hetherington  <cth@carlh.net>

	* Updated fr_FR translation from Thierry Journet.

2016-11-12  Carl Hetherington  <cth@carlh.net>

	* Version 2.9.40 released.

2016-11-10  Carl Hetherington  <cth@carlh.net>

	* Version 2.9.39 released.

2016-11-08  Carl Hetherington  <cth@carlh.net>

	* Fix subtitle rendering when size and colour changes
	word-by-word or character-by-character.  Fix some cut-off
	subtitles.

2016-11-07  Carl Hetherington  <cth@carlh.net>

	* Updated da_DK translation from Anders Uhl Pedersen.

2016-10-31  Carl Hetherington  <cth@carlh.net>

	* Fix failure to resume encodes when using encryption (#980).

2016-10-29  Carl Hetherington  <cth@carlh.net>

	* Updated de_DE translation from Carsten Kurz.

2016-10-28  Carl Hetherington  <cth@carlh.net>

	* Updated it_IT translation from Fabio "Zak" Belli.

2016-10-26  Carl Hetherington  <cth@carlh.net>

	* Updated es_ES translation from Manuel AC.

	* Updated sv_SE translation from Adam Klotblixt.

2016-10-25  Carl Hetherington  <cth@carlh.net>

	* Updated nl_NL translation from Rob van Nieuwkerk.

2016-10-24  Carl Hetherington  <cth@carlh.net>

	* Version 2.9.38 released.

2016-10-24  Carl Hetherington  <cth@carlh.net>

	* Fix more problems with 3D alternate-frame
	sources.

	* Allow creation of >60fps 3D DCPs.

	* Fix over-fussy parsing of times from subtitles
	files in some cases.