@@ -1,3 +1,7 @@
+2016-11-25  Carl Hetherington  <cth@carlh.net>
+
+	* Allow multi-edit of content timing details (#1010).
+
 2016-11-23  Carl Hetherington  <cth@carlh.net>
 
 	* Fix crash on pressing enter in a crop control on Windows (#1009).
